	Updated Tutorial5 and balls3d to both force collision checks when the balls are
		being created so the initial screenshot is prettier (has proper colors in it).
	Reindented
	Changed calls to cloneNode() into calls to cloneTree() in certain 3D portrayals;
		cloneNode() is supposedly pseudoprivate.
	Slightly revised setSelected() procedure for 3D objects.  Still suboptimal though.
		See documentation on the method in SimplePortrayal3D.
	Added a HowTo
	Bug fix to ShapePortrayal3D: added an appearance now
	Bug fix to CubePortrayal3D on pickability. 
		(although we might soon replace the class with BoxPortrayal3D).
	GenericEdgePortrayal3D lets you change the appearace and turn picking on/off. 
		-(i.e. some of the functionality of PrimitivePortrayal3D is offered here, too).
		-fixed previous bug in picking edge-portrayals extending GenericEdgePortrayal3D.
		-The classes extended GenericEdgePortrayal3D were refactored.
		-For using non-Primitive edge portrayal constructs, see ArrowEdgePortrayal3D.
	Updated MASON to compile with java 1.4
	Moved ValuePortrayal3D under ShapePortrayal3D
	Removed vestigial 'orient' variable from TransformedPortrayal2D
	added new Constructor and a missing copy of 'precise' variable in DrawInfo2D
	Bug fix in FieldPortrayal2D: getLocation -> getPositionInFieldPortrayal
	2D tooltips now only list objects whose status (name) is non-null
	Made changes to Arrow and ArrowEdgePortrayal3D: the default appearance in Arrow is now lit grey.
	Increased the size of the default font in SimpleEdgePortrayal3D: from 24 to 60.
		-this change was motivated by the labels in Balls3DWithUI being way to small
		-this change was tested on mac-os and windows (/w java3D v 1.5)
		-this change affects GenericEdgePortrayal3D and its subclasses!
	GenericEdgePortrayal3D: minor housekeeping item, unused object commented out.
	Reindented	
	Made various edgePortrayal3Ds thinner by default: Cone, Cylinder and Arrow.
	