@@ -1610,4 +1610,5 @@ Version 14
 	GenericEdgePortrayal3D: minor housekeeping item, unused object commented out.
 	Reindented	
 	Made various edgePortrayal3Ds thinner by default: Cone, Cylinder and Arrow.
+	Arrow: arrow head is wider, and, for short arrows it's also shorter.
 	
